assets/css/main.css
/* ... */
.header-main__nav li:not(:last-child):after {
  content: '';
  display: block;
  position: absolute;
  transform: rotate(20deg) translateY(-40%);
  top: 50%;
  right: -1.1rem;
  width: 1px;
  height: 100%;
  background: #E6E6E6;
}

.home-intro {
  padding: 1.4rem;
  font-size: 1.2rem;
  line-height: 2rem;
}

.home-intro:not(:last-child) {
  border-bottom: 1px solid #E6E6E6;
}

.home-intro p {
  margin: 0;
}

.last-post {
  padding: 1.4rem;
}

.last-post:not(:last-child) {
  border-bottom: 1px solid #E6E6E6;
}

.last-post__title {
  margin-bottom: .8rem;
}

.skills {
  padding: 1.4rem;
}

.skills:not(:last-child) {
  border-bottom: 1px solid #E6E6E6;
}

.skills__title {
  margin-bottom: .8rem;
}

.work-feed {
  padding: 1.4rem;
}

.work-feed:not(:last-child) {
  border-bottom: 1px solid #E6E6E6;
}

.work-feed ul {
  margin: 1.2rem -0.6rem 0 -0.6rem;
  padding: 0;
  text-align: center;
  font-size: 0;
}

.work-feed li {
  display: inline-block;
  padding: 1.2rem 0.6rem 0 0.6rem;
  width: 50%;
  font-size: 1.25rem;
  line-height: 0;
}

.work-feed a {
  display: inline-block;
  width: 100%;
  padding: 0;
  background: none;
  font-size: 1.25rem;
  line-height: 0;
  transition: transform .1s ease-in, top .1s ease-in;
}

.work-feed a:hover,.work-feed a:focus {
  transform: scale(1.1);
  top: 0;
}

.work-feed img {
  width: 100%;
  height: auto;
}

.projects-worked {
  padding: 1.4rem;
}

.projects-worked:not(:last-child) {
  border-bottom: 1px solid #E6E6E6;
}

.projects-worked ul {
  margin: 1.8rem -.5rem 0 -.5rem;
  padding: 0;
  font-size: 0;
  text-align: center;
}

.projects-worked li {
  display: inline-block;
  vertical-align: middle;
  width: 33.333%;
  margin-bottom: 1rem;
  padding: .5rem;
}

.projects-worked img {
  width: 100%;
  transition: transform .1s;
}

.projects-worked a {
  background: none;
  transform: opacity .1s;
}

.projects-worked a:hover,.projects-worked a:focus {
  z-index: 2;
  opacity: 1;
}

.projects-worked a:hover img,.projects-worked a:focus img {
  transform: scale(1.1);
}

.contact {
  padding: 1.4rem;
}

.contact:not(:last-child) {
  border-bottom: 1px solid #E6E6E6;
}

.contact p {
  margin-bottom: 0;
}

.post-excerpt__title {
  margin: 0;
  font-size: 1.5rem;
  line-height: 2.4rem;
}

.post-excerpt p {
  margin: .4rem 0 0 0;
}

.meta__date {
  text-transform: uppercase;
  font-size: 1rem;
  color: #888;
}

@media (min-width: 30rem) {
  body {
    padding: 2.5rem;
  }
}

@media (min-width: 38rem) {
  .blog-posts {
    padding: 3.6rem 4.375rem 4.375rem 4.375rem;
  }

  .post {
    padding: 3.6rem 4.375rem 4.375rem 4.375rem;
  }

  .post pre {
    padding: .8rem 1rem;
  }

  .post pre code {
    margin-right: 1rem;
  }

  .post ul li {
    margin-left: 0;
  }

  .post ol li {
    margin-left: 0;
  }

  .post ol ul li {
    margin-left: 0;
  }

  .post li ul {
    margin-left: 1rem;
  }

  .post blockquote {
    margin-left: 1rem;
  }

  .header-main {
    padding: 3.6rem 4.375rem 4.375rem 4.375rem;
  }

  .header-main__nav {
    padding: 3rem 0 1rem;
  }

  .home-intro {
    padding: 3.6rem 4.375rem 4.375rem 4.375rem;
  }

  .home-intro {
    font-size: 1.375rem;
    line-height: 2.25rem;
  }

  .last-post {
    padding: 3.6rem 4.375rem 4.375rem 4.375rem;
  }

  .skills {
    padding: 3.6rem 4.375rem 4.375rem 4.375rem;
  }

  .work-feed {
    padding: 3.6rem 4.375rem 4.375rem 4.375rem;
  }

  .work-feed li {
    width: 33.333%;
  }

  .projects-worked {
    padding: 3.6rem 4.375rem 4.375rem 4.375rem;
  }

  .projects-worked li {
    margin-bottom: 0;
  }

  .contact {
    padding: 3.6rem 4.375rem 4.375rem 4.375rem;
  }
}

@media (min-width: 54rem) {
  .header-main {
    font-size: 0;
  }

  .header-main__title {
    display: inline-block;
    vertical-align: top;
    width: 50%;
  }

  .header-main__nav {
    padding: 2.3rem 0 1rem;
    display: inline-block;
    vertical-align: top;
    width: 50%;
  }

  .header-main__nav ul {
    text-align: right;
  }

  .header-main__nav li:not(:last-child) {
    margin-right: 3.2rem;
  }

  .header-main__nav li:not(:last-child):after {
    right: -1.5rem;
  }

  .work-feed li {
    width: 25%;
  }
}

